--- a/assignments/Mechanistic_Interp.ipynb
+++ b/assignments/Mechanistic_Interp.ipynb
@@ -71,13 +71,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Generate synthetic pictures of shapes (square, rectangle, triangle, circle).\n",
-        "Each image is 64×64 pixels, black background with a white shape.\n",
+        "First we **generate synthetic pictures of shapes** (square, rectangle, triangle, circle).\n",
+        "Each image is 64×64 pixels with a white shape on a black background.\n",
         "\n",
         "Input:\n",
-        "Just the shape name (e.g., \"square\", \"triangle\").\n",
+        "The name of the shape (e.g., \"square\", \"triangle\")\n",
+        "\n",
         "Output:\n",
-        "A grayscale image (like a black-and-white picture).\n"
+        "The corresponding grayscale image\n"
       ],
       "metadata": {
         "id": "lJSbfabXgW_1"
@@ -163,13 +164,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Wraps all these shape images into a PyTorch “Dataset” object, so they can be fed into the neural network easily.\n",
+        "Now that we have the images generated, we will wraps them into a **PyTorch Dataset object**, so that they can be fed into the neural network easily.\n",
         "\n",
-        "Input:The number of samples you want (2,000 images).\n",
-        "Image size (64×64).\n",
-        "\n",
-        "Output: Splits into Training set (80%)\n",
-        "Validation set (20%)"
+        "Input:The number of sample images (We will consider 2,000 images).\n",
+        "Output: Splits the dataset into train and validation sets"
       ],
       "metadata": {
         "id": "Ss6fLXcQg1Ql"
@@ -233,14 +231,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Build a Convolutional Neural Network (CNN).\n",
+        "We now **build a Convolutional Neural Network (CNN)**. CNNs are really good at recognizing shapes because their first layers learn edges and corners, and later layers learn whole patterns.\n",
         "\n",
-        "Input: An image (1 channel = grayscale).\n",
+        "This CNN is an image clasifying neyral network that learns to recognize shapes by detecting edges, corners, and patterns through its convolution layers.\n",
+        "Its final fully connected layers combine these learned features to decide whether the image is a square, rectangle, triangle, or circle.\n",
         "\n",
-        "Output:Four indicators to see how strongly the model believes the image is a: Square, Rectangle, Triangle, Circle.\n",
+        "Input: An image\n",
+        "\n",
+        "Output: Indicators to see how strongly the model believes the image is a: Square, Rectangle, Triangle, Circle.\n",
         "\n",
         "\n",
-        "CNNs are really good at recognizing shapes because their first layers learn edges and corners, and later layers learn whole patterns.\n"
+        "\n"
       ],
       "metadata": {
         "id": "1ZOwCS6ThvSV"
@@ -252,11 +253,21 @@
         "class TinyCNN(nn.Module):\n",
         "    def __init__(self, n_classes=4):\n",
         "        super().__init__()\n",
-        "        self.conv1 = nn.Conv2d(1, 8, kernel_size=5, padding=2)   # 8 filters\n",
-        "        self.conv2 = nn.Conv2d(8, 12, kernel_size=3, padding=1)  # 12 filters\n",
-        "        self.pool = nn.MaxPool2d(2,2)\n",
-        "        self.fc1 = nn.Linear((IMG_SIZE//2)*(IMG_SIZE//2)*12, 32)\n",
-        "        self.fc2 = nn.Linear(32, n_classes)\n",
+        "\n",
+        "        # First Convolutional Layer\n",
+        "        self.conv1 = nn.Conv2d(1, 8, kernel_size=5, padding=2)   # 8 filters , Each filter scans the image to detect simple edges and corners\n",
+        "\n",
+        "        # Second Convolutional Layer\n",
+        "        self.conv2 = nn.Conv2d(8, 12, kernel_size=3, padding=1)  # 12 filters , Takes the 8 learned features from the first layer as input and produces 12 deeper feature maps that detect more complex patterns, like curves or shapes.\n",
+        "\n",
+        "        # Pooling Layer\n",
+        "        self.pool = nn.MaxPool2d(2,2)   # Keeps the most important information while shrinking data for faster learning\n",
+        "\n",
+        "        #Fully connected Layers\n",
+        "        self.fc1 = nn.Linear((IMG_SIZE//2)*(IMG_SIZE//2)*12, 32)  # learns combinations of features (like “round + smooth = circle”)\n",
+        "        self.fc2 = nn.Linear(32, n_classes)                       # outputs 4 values, one for each possible shape\n",
+        "\n",
+        "\n",
         "    def forward(self, x, return_acts=False):\n",
         "        a1 = F.relu(self.conv1(x))    # B x 8 x H x W\n",
         "        p1 = self.pool(a1)            # B x 8 x H/2 x W/2\n",
@@ -300,7 +311,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Train the model\n",
+        "Now we **train the CNN.**\n",
         "\n",
         "The model learns based on the Train set.\n",
         "After each batch, it adjusts itself a little (this is backpropagation).\n",
@@ -340,7 +351,7 @@
         "            correct += (preds == yb).sum().item()\n",
         "    return loss_sum/total, correct/total\n",
         "\n",
-        "# train for modest epochs until good perf\n",
+        "# train for modest epochs until good performance\n",
         "n_epochs = 12\n",
         "for ep in range(n_epochs):\n",
         "    model.train()\n",
@@ -538,7 +549,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Test on Validation set"
+        "The model’s training losses consistently decrease while validation accuracy rises, showing that it’s learning the patterns in the data effectively.\n",
+        "By the final epoch, we see a validation accuracy of 97.8% that indicates good performance with minimal overfitting."
+      ],
+      "metadata": {
+        "id": "DVSewllBRv7U"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now, lets **evaluate the CNN's performance on the Validation set**"
       ],
       "metadata": {
         "id": "hQxpWG4ym3MR"
@@ -591,7 +612,21 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Visualize learned conv2 filters (weights)"
+        "The visualization shows several test images with their predicted (P) and true (T) labels.\n",
+        "All predictions ( P = T) are aligned with theirtrue labels. Tis means that the CNN has learned to accurately recognize different shapes like circles, triangles, and squares.\n",
+        "It performs very well on the validation with high precision."
+      ],
+      "metadata": {
+        "id": "qtAU_gkhS1AM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Visualize learned conv2 filters **\n",
+        "\n",
+        "We will nor look insite the CNN's brain. We want to see what each filter in the second convolutional layer has learned.\n",
+        "We will use visualizations to identify what kinds of patterns the model used to recognize these images."
       ],
       "metadata": {
         "id": "hizrOGNLnFIY"
@@ -608,6 +643,9 @@
         "plt.figure(figsize=(9,3))\n",
         "for i in range(kernels.shape[0]):\n",
         "    plt.subplot(2,6,i+1)\n",
+        "\n",
+        "    #Displays each of these 12 kernels as small 3×3 “heatmaps”\n",
+        "    #The red and blue colors (from cmap='seismic') show positive and negative weights, i.e., how the filter responds to different patterns.\n",
         "    plt.imshow(kernels[i], cmap='seismic', vmin=-np.max(np.abs(kernels)), vmax=np.max(np.abs(kernels)))\n",
         "    plt.title(f\"f{i}\")\n",
         "    plt.axis('off')\n",
@@ -639,9 +677,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Interpretation:\n",
         "\n",
-        "The conv2 kernel visualizations show that different filters have distinct color patterns, indicating sensitivity to various edge directions and textures. Red and blue regions represent positive and negative weights, suggesting that some filters detect vertical or diagonal edges, while others emphasize corners or intensity contrasts in the shapes.\n",
+        "\n",
+        "The conv2 kernel visualization shows the 12 learned filters (kernels) from the second convolutional layer (conv2) of the CNN.\n",
+        "\n",
+        "Each small 3×3 grid represents one filter’s pattern of weights — the red and blue regions indicate how the filter responds to different pixel arrangements:\n",
+        "\n",
+        "Red areas are positive weights which activate when that pattern is present in the image\n",
+        "\n",
+        "Blue areas are negative weights which suppress opposite patterns\n",
+        "\n",
+        "Together, these filters detect more complex features like corners, edges in different directions, and parts of shapes.\n",
         "\n",
         "\n"
       ],
@@ -652,13 +698,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Activation maps for a single example (conv2)\n",
+        "We’ll now **visualize the activation maps from the second convolutional layer **(conv2).\n",
         "\n",
-        "Shows which filters light up (activate) for a given image (triangle).\n",
+        "These maps reveal which filters become active when the CNN views an input image (in this case, a triangle).\n",
         "\n",
-        "Input:One image from the validation set.\n",
-        "\n",
-        "Output:Heatmaps, each showing where a filter paid attention.\n"
+        "Input: One validation image.\n",
+        "Output: Heatmaps illustrating the specific regions each filter focuses on within the image."
       ],
       "metadata": {
         "id": "FgsVOdy8nTJT"
@@ -736,8 +781,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Interpretation: This tells us which parts of the image matter most to each filter.\n",
-        "The activation maps show that multiple filters in the second convolution layer respond strongly along the edges and corners of the triangle. Bright areas highlight that the model focuses mainly on the triangle’s boundaries, confirming that these filters detect angular shapes and edge patterns essential for identifying triangles."
+        "These activation maps show how the second convolutional layer (conv2) responds to an image of a triangle.\n",
+        "Each map corresponds to one filter, highlighting the regions that most strongly activate that filter.\n",
+        "\n",
+        "The bright yellow areas mark where the CNN is focusing mainly along the edges and corners of the triangle.\n",
+        "This means the filters have learned to detect geometric boundaries and shape outlines, helping the network recognize that the object is indeed a triangle."
       ],
       "metadata": {
         "id": "VVE4N-9hnjV_"
@@ -746,12 +794,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Top-activating images per filter\n",
+        "**Top-Activating Images per Filter**\n",
         "\n",
-        "Finds which images make each filter the most excited.\n",
+        "This analysis reveals which images cause each filter in the CNN to respond most strongly essentially showing what kind of input each filter “likes” the most.\n",
         "\n",
-        "Input: validation images and their activations.\n",
-        "Output: For each filter, the top 5 images that activated it most.\n"
+        "Input: Validation images and their recorded activation values.\n",
+        "Output: For each filter, the top 5 images that trigger the highest activations, illustrating what visual patterns each filter has learned to detect.\n"
       ],
       "metadata": {
         "id": "gu52w-CRnnsy"
@@ -926,11 +974,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Interprtation:\n",
-        "\n",
-        "Filters 0 and 2 activate strongly for class 3 (circle), indicating they detect curved edges or round boundaries. Meanwhile, filters 1, 3, and 4 respond mainly to class 2 (triangle) images, suggesting they specialize in recognizing sharp corners and angular shapes.\n",
-        "\n",
-        "Filters 7, 8, 10, and 11 all activate strongly for class 3 (circle) images, suggesting they detect curved or round patterns characteristic of circles. In contrast, filter 9 responds to class 0 (square) images, indicating it captures straight edges or angular boundaries.\n"
+        "Filters 0 and 2 respond most strongly to class 3 (circle), suggesting they detect curved edges and smooth round boundaries.\n",
+        "Filters 1, 3, and 4 are more active for class 2 (triangle), indicating sensitivity to sharp angles and pointed shapes.\n",
+        "Similarly, filters 7, 8, 10, and 11 are highly responsive to circle images, reinforcing their role in identifying rounded patterns, while filter 9 activates mainly for class 0 (square), capturing straight lines and right-angled edges."
       ],
       "metadata": {
         "id": "gVMzB4UorOKR"
@@ -938,21 +984,14 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "mx171zV0qhAv"
-      }
-    },
-    {
-      "cell_type": "markdown",
       "source": [
-        "Ablation (turn filters off)\n",
+        "**Ablation (Turning Off Filters)**\n",
         "\n",
-        "For one chosen image, it turns off one filter at a time in the second conv layer, then measures how much the model’s confidence drops for the correct class.\n",
+        "For a selected image, we will disable each filter in the second convolutional layer one at a time to observe how much the model’s confidence in the correct class decreases.\n",
         "\n",
-        "Input:One test image (and its true label).\n",
+        "Input: One test image along with its true label.\n",
         "\n",
-        "Output:A bar chart showing how much each filter affects the prediction."
+        "Output: A bar chart illustrating how strongly each filter contributes to the model’s final prediction."
       ],
       "metadata": {
         "id": "NJXPC9T3oGDC"
@@ -1032,9 +1071,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Interpretation:\n",
-        "\n",
-        "This tells us which filters are most important. The ablation test for this single example shows that removing filter 4 causes the largest drop in prediction confidence, meaning this filter is crucial for identifying that shape. Other filters have minimal effect, suggesting they play a smaller or redundant role in the decision."
+        "This tells us which filters are most important. The ablation test for this single example shows that removing filter 4 causes the largest drop in prediction confidence, meaning filter 4 is crucial for identifying the shape. Other filters have a minimal effect, suggesting that they play a smaller or redundant role in the decision."
       ],
       "metadata": {
         "id": "Ra-wyKxEoNxi"
@@ -1043,16 +1080,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Average ablation across many images\n",
+        "**Average ablation across many images**\n",
         "\n",
-        "Perform ablation across many validation images.\n",
-        "Then average the effect for each filter.\n",
+        "Let's now perform ablation across many validation images and then average the effect for each filter.This gives a general picture of which filters matter most overall for the model’s understanding.\n",
         "\n",
         "Input: All validation images.\n",
         "\n",
         "Output: A bar chart showing average importance of each filter.\n",
-        "\n",
-        "Why: Instead of just one image, this gives a general picture of which filters matter most overall for the model’s understanding."
+        "\n"
       ],
       "metadata": {
         "id": "IAi5Qq2coZxw"
@@ -1142,8 +1177,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Interpretation:\n",
-        "\n",
         "The ablation results show that filter 4 has the highest impact on the model’s predictions, indicating it captures the most important visual feature for shape recognition. Filters with smaller changes contribute less, suggesting they encode less critical or redundant features."
       ],
       "metadata": {
@@ -1153,12 +1186,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Occlusion test\n",
+        "**Occlusion test**\n",
         "\n",
-        "Block small parts (patches) of an image and sees how the model’s confidence changes.\n",
-        "If blocking the middle of a circle makes the model less sure, then the middle is important.\n",
+        "We will now block small parts (patches) of an image and sees how the model’s confidence changes.\n",
+        "If blocking the middle of a circle makes the model less sure, that is an indicator that the middle part is important.\n",
         "\n",
-        "Input: One image, patch size, and stride (how far we move the patch each time).\n",
+        "Input: One image, patch size, and stride (how far we move the patch each time)\n",
+        "\n",
         "Output:\n",
         "A heatmap showing which parts of the image matter most (bright areas = more important).\n"
       ],
@@ -1221,8 +1255,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Interpretation:\n",
-        "\n",
         "For triangle (class 2), base prob 1.00 means the model was 100% sure before any occlusion.\n",
         "The occlusion map shows that the model’s prediction confidence drops mainly when the central region of the image is hidden, indicating that it focuses on the core area of the shape for classification. Darker regions have little effect, meaning the background contributes minimally to the decision."
       ],
